--- a/Module1-IntelligentApp/Source/Ex1/Begin/src/PartsUnlimited.Models/project.json
+++ b/Module1-IntelligentApp/Source/Ex1/Begin/src/PartsUnlimited.Models/project.json
@@ -17,16 +17,15 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0-rc1-final"
+    "Microsoft.Extensions.Configuration.UserSecrets": "1.0.0-rc1-final",
+    "Microsoft.Azure.DocumentDB": "1.5.3"
   },
   "commands": {
     "ef": "EntityFramework.Commands"
   },
   "frameworks": {
     "dnx451": {
-      "dependencies": {
-        "Microsoft.Azure.DocumentDB": "1.5.2"
-      }
+      "dependencies": {      }
     }
   }
 }
