--- a/Module1-IntelligentApp/Source/Ex1/Assets/ProductCatalogSampleData/ProductCatalogSampleData/ProductCatalogSampleData.csproj
+++ b/Module1-IntelligentApp/Source/Ex1/Assets/ProductCatalogSampleData/ProductCatalogSampleData/ProductCatalogSampleData.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DDC76444-8876-4615-AC16-28F788B7F9A3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PartsUnlimitedDataGen</RootNamespace>
-    <AssemblyName>PartsUnlimitedDataGen</AssemblyName>
+    <RootNamespace>ProductCatalogUploader</RootNamespace>
+    <AssemblyName>ProductCatalogUploader</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
