--- a/Module3-MachineLearning/Source/Ex1/Begin/PartsUnlimited/src/PartsUnlimitedWebsite/config.json
+++ b/Module3-MachineLearning/Source/Ex1/Begin/PartsUnlimited/src/PartsUnlimitedWebsite/config.json
@@ -36,6 +36,10 @@
       "AccountKey": "",
       "ModelId": ""
     },
+	"TextAnalytics": {
+	  // Please place the account key you obtained for the text analytics service here
+	  "AccountKey": "",
+	},
     "ApplicationInsights": {
       "InstrumentationKey": "efc04167-3227-40ff-aa88-46a271dba379"
     },
